# llm-security-giskard-example

./: .gitignore  End-to-End-LLM-Security-with-Giskard-Scan-and-Guards.qmd  README.md  end_to_end_llm_security_with_giskard.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: llm-security.yml
data/: techcorp_knowledge_base.csv
scripts/: run_raget.py  run_scan.py  run_test_suite.py
src/: __init__.py  guards.py  metrics.py  model.py  pipeline.py  retrieval.py
