[project]
name = "llm-security-giskard-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "giskard[llm]>=2.15.0",
    "ipywidgets>=8.0.0",
    "jupyterlab>=3.0.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]
